--- a/craft/templates/_layout.html
+++ b/craft/templates/_layout.html
@@ -11,7 +11,7 @@
 
 </head>
 
-<body id="{% if craft.request.firstSegment %}{{craft.request.firstSegment}}{% else %}home{% endif %}" >
+<body id="{% if craft.request.getSegment(1) %}{{craft.request.getSegment(1)}}{% else %}home{% endif %}" >
 	<!-- Header -->
 	<header id="header">
 
@@ -19,12 +19,12 @@
 			<nav>
 				<h1><a href="{{ siteUrl }}">{{ siteName }}</a></h1>
 				<ul class="navigation">
-					<li><a href="{{ url('about') }}" {% if craft.request.getSegment(2) == 'avout' %}class="active"{% endif %}>About</a></li>
-					<li><a href="{{ url('philosophy') }}" {% if craft.request.getSegment(2) == 'philosophy' %}class="active"{% endif %}>Philosophy</a></li>
-					<li><a href="{{ url('vineyard') }}" {% if craft.request.getSegment(2) == 'vineyard' %}class="active"{% endif %}>Vineyard</a></li>
-					<li><a href="{{ url('olive-oil') }}" {% if craft.request.getSegment(2) == 'olive-oil' %}class="active"{% endif %}>Olive Oil</a></li>
-					<li><a href="{{ url('news') }}" {% if craft.request.getSegment(2) == 'news' %}class="active"{% endif %}>News</a></li>
-					<li><a href="{{ url('contact') }}" {% if craft.request.getSegment(2) == 'contact' %}class="active"{% endif %}>Contact</a></li>
+					<li><a href="{{ url('about') }}" {% if craft.request.getSegment(1) == 'avout' %}class="active"{% endif %}>About</a></li>
+					<li><a href="{{ url('philosophy') }}" {% if craft.request.getSegment(1) == 'philosophy' %}class="active"{% endif %}>Philosophy</a></li>
+					<li><a href="{{ url('vineyard') }}" {% if craft.request.getSegment(1) == 'vineyard' %}class="active"{% endif %}>Vineyard</a></li>
+					<li><a href="{{ url('olive-oil') }}" {% if craft.request.getSegment(1) == 'olive-oil' %}class="active"{% endif %}>Olive Oil</a></li>
+					<li><a href="{{ url('news') }}" {% if craft.request.getSegment(1) == 'news' %}class="active"{% endif %}>News</a></li>
+					<li><a href="{{ url('contact') }}" {% if craft.request.getSegment(1) == 'contact' %}class="active"{% endif %}>Contact</a></li>
 				</ul>
 				<ul class="localization">
 					<li><a href="{{ url('/en') }}" {% if craft.request.firstSegment == 'en' %}class="active"{% endif %}>en</a></li>
