--- a/craft/templates/philosophy.html
+++ b/craft/templates/philosophy.html
@@ -1,7 +1,17 @@
 {% extends "_layout" %}
 
 {% block content %}
-	<h1>Philosophy</h1>
-
+  
+  {% for entry in craft.entries.section('pages').slug('philosophy') %}
+	<h1>{{ entry.pageSubtitle }}</h1>
+  <div class="page-content">
+    <div class="page-image">
+      <img src="{{ entry.pageImage.first().getUrl() }}" alt="">
+    </div>
+    <div class="page-text">
+      {{ entry.pageBody }}
+    </div>
+  </div>
+  {% endfor %}
 	
 {% endblock %}
