--- a/public/css/main.css
+++ b/public/css/main.css
@@ -228,3 +228,46 @@ main#content .container {
   margin-top: 80px;
   margin-bottom: 40px;
 }
+
+/* line 135, sass/main.sass */
+.page-content:after {
+  content: "";
+  clear: both;
+  width: 100%;
+  height: 1px;
+  display: block;
+}
+/* line 141, sass/main.sass */
+.page-content .page-image {
+  float: right;
+  padding-left: 75px;
+  width: 334px;
+}
+/* line 145, sass/main.sass */
+.page-content .page-image img {
+  width: 334px;
+}
+/* line 147, sass/main.sass */
+.page-content .page-text {
+  float: left;
+  width: 596px;
+}
+/* line 150, sass/main.sass */
+.page-content .page-text h1 {
+  margin-bottom: 10px;
+}
+/* line 152, sass/main.sass */
+.page-content .page-text h2 {
+  border-top: 1px solid #b24629;
+  border-bottom: 1px solid #b24629;
+  padding: 25px 0;
+  margin: 35px 0;
+}
+/* line 157, sass/main.sass */
+.page-content .page-text .page-text-block {
+  display: none;
+}
+/* line 159, sass/main.sass */
+.page-content .page-text .page-text-block.active {
+  display: block;
+}
