--- a/public/css/sass/main.sass
+++ b/public/css/sass/main.sass
@@ -130,3 +130,31 @@ footer
   main#content &
     margin-top: 80px
     margin-bottom: 40px
+
+.page-content
+  &:after
+    content: ""
+    clear: both
+    width: 100%
+    height: 1px
+    display: block
+  .page-image
+    float: right
+    padding-left: 75px
+    width: 334px
+    img
+      width: 334px
+  .page-text
+    float: left
+    width: 596px
+    h1
+      margin-bottom: 10px
+    h2
+      border-top: 1px solid $copper
+      border-bottom: 1px solid $copper
+      padding: 25px 0
+      margin: 35px 0
+    .page-text-block
+      display: none
+      &.active
+        display: block
