--- a/public/css/main.css
+++ b/public/css/main.css
@@ -73,20 +73,19 @@ body {
 header {
   border-bottom: 30px solid #b24629;
   height: 482px;
-  width: 100%;
   display: block;
 }
 /* line 30, sass/main.sass */
 #home header {
   height: 770px;
 }
-/* line 36, sass/main.sass */
+/* line 35, sass/main.sass */
 header .header-container {
   width: 1440px;
   margin: 0 auto;
   position: relative;
 }
-/* line 40, sass/main.sass */
+/* line 39, sass/main.sass */
 header nav {
   background-color: rgba(0, 0, 0, 0.35);
   height: 115px;
@@ -94,7 +93,7 @@ header nav {
   z-index: 1;
   position: relative;
 }
-/* line 46, sass/main.sass */
+/* line 45, sass/main.sass */
 header .logo {
   width: 300px;
   height: 92px;
@@ -104,45 +103,46 @@ header .logo {
   top: 10px;
   margin-left: -150px;
 }
-/* line 47, sass/main.sass */
+/* line 46, sass/main.sass */
 header .logo h1, header .logo h3 {
   text-indent: -10000px;
 }
-/* line 56, sass/main.sass */
+/* line 55, sass/main.sass */
 header .navigation {
   padding-top: 50px;
+  float: right;
 }
-/* line 58, sass/main.sass */
+/* line 59, sass/main.sass */
+header .navigation:first-of-type {
+  float: left;
+}
+/* line 61, sass/main.sass */
+header .navigation:first-of-type li {
+  margin-left: 45px;
+  margin-right: 0;
+}
+/* line 64, sass/main.sass */
 header .navigation li {
   display: inline-block;
   text-transform: uppercase;
-}
-/* line 61, sass/main.sass */
-header .navigation li:nth-child(-n+4) {
-  float: left;
-  margin-left: 45px;
-}
-/* line 64, sass/main.sass */
-header .navigation li:nth-child(n+5) {
-  float: right;
   margin-right: 45px;
 }
-/* line 67, sass/main.sass */
+/* line 70, sass/main.sass */
 header .navigation a {
   color: white;
   text-decoration: none;
 }
-/* line 70, sass/main.sass */
+/* line 73, sass/main.sass */
 header .navigation a.active {
   border-bottom: 3px solid white;
 }
-/* line 72, sass/main.sass */
+/* line 75, sass/main.sass */
 header .localization {
   position: absolute;
   top: 0;
   right: 45px;
 }
-/* line 76, sass/main.sass */
+/* line 79, sass/main.sass */
 header .localization li {
   padding: 7px 14px;
   background: white;
@@ -150,49 +150,49 @@ header .localization li {
   float: left;
   display: block;
 }
-/* line 82, sass/main.sass */
+/* line 85, sass/main.sass */
 header .localization li.active {
   background: #b24629;
 }
-/* line 84, sass/main.sass */
+/* line 87, sass/main.sass */
 header .localization li.active a {
   color: white;
 }
-/* line 86, sass/main.sass */
+/* line 89, sass/main.sass */
 header .localization li a {
   text-decoration: none;
   color: #999999;
 }
 
-/* line 89, sass/main.sass */
+/* line 92, sass/main.sass */
 footer {
   text-align: center;
   text-transform: uppercase;
   margin-top: 14px;
   margin-bottom: 50px;
 }
-/* line 94, sass/main.sass */
+/* line 97, sass/main.sass */
 footer ul {
   margin-bottom: 6px;
 }
-/* line 96, sass/main.sass */
+/* line 99, sass/main.sass */
 footer ul li {
   display: inline-block;
   padding: 0 25px;
   border-right: 1px solid #333333;
 }
-/* line 100, sass/main.sass */
+/* line 103, sass/main.sass */
 footer ul li:last-child {
   border-right: none;
 }
 
-/* line 103, sass/main.sass */
+/* line 106, sass/main.sass */
 .banners {
   height: 100%;
   position: relative;
   z-index: 0;
 }
-/* line 107, sass/main.sass */
+/* line 110, sass/main.sass */
 .banners .banner {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -201,35 +201,36 @@ footer ul li:last-child {
   padding-top: 115px;
   height: 100%;
   background-size: cover;
+  background-position: center center;
   text-align: center;
   color: white;
   font-size: 46px;
 }
-/* line 116, sass/main.sass */
+/* line 120, sass/main.sass */
 .banners .banner .banner-headline {
   max-width: 900px;
   margin: 0 auto;
   position: relative;
 }
 
-/* line 123, sass/main.sass */
+/* line 127, sass/main.sass */
 .container {
   width: 1005px;
   margin: 0 auto;
   position: relative;
 }
-/* line 127, sass/main.sass */
+/* line 131, sass/main.sass */
 #home main#content .container {
   margin-top: 0;
   margin-bottom: 0;
 }
-/* line 130, sass/main.sass */
+/* line 134, sass/main.sass */
 main#content .container {
   margin-top: 80px;
   margin-bottom: 40px;
 }
 
-/* line 135, sass/main.sass */
+/* line 139, sass/main.sass */
 .page-content:after {
   content: "";
   clear: both;
@@ -237,37 +238,37 @@ main#content .container {
   height: 1px;
   display: block;
 }
-/* line 141, sass/main.sass */
+/* line 145, sass/main.sass */
 .page-content .page-image {
   float: right;
   padding-left: 75px;
   width: 334px;
 }
-/* line 145, sass/main.sass */
+/* line 149, sass/main.sass */
 .page-content .page-image img {
   width: 334px;
 }
-/* line 147, sass/main.sass */
+/* line 151, sass/main.sass */
 .page-content .page-text {
   float: left;
   width: 596px;
 }
-/* line 150, sass/main.sass */
+/* line 154, sass/main.sass */
 .page-content .page-text h1 {
   margin-bottom: 10px;
 }
-/* line 152, sass/main.sass */
+/* line 156, sass/main.sass */
 .page-content .page-text h2 {
   border-top: 1px solid #b24629;
   border-bottom: 1px solid #b24629;
   padding: 25px 0;
   margin: 35px 0;
 }
-/* line 157, sass/main.sass */
+/* line 161, sass/main.sass */
 .page-content .page-text .page-text-block {
   display: none;
 }
-/* line 159, sass/main.sass */
+/* line 163, sass/main.sass */
 .page-content .page-text .page-text-block.active {
   display: block;
 }
