--- a/public/css/sass/main.sass
+++ b/public/css/sass/main.sass
@@ -165,3 +165,9 @@ footer
       display: none
       &.active
         display: block
+
+.wine-page-content
+  .wine-page-text
+  .wine-page-image
+    img
+      width: 195px
