--- a/public/css/main.css
+++ b/public/css/main.css
@@ -63,29 +63,37 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
   display: block;
 }
 
-/* line 23, sass/main.sass */
+@font-face {
+  font-family: "Nickyshand";
+  src: url("../fonts/nickyshand_regular-webfont.eot");
+  src: url("../fonts/nickyshand_regular-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/nickyshand_regular-webfont.woff2") format("woff2"), url("../fonts/nickyshand_regular-webfont.woff") format("woff"), url("../fonts/nickyshand_regular-webfont.ttf") format("truetype"), url("../fonts/nickyshand_regular-webfont.svg#nickyshandregular") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+
+/* line 26, sass/main.sass */
 body {
   background-color: white;
   color: #333333;
 }
 
-/* line 29, sass/main.sass */
+/* line 32, sass/main.sass */
 header {
   border-bottom: 30px solid #b24629;
   height: 482px;
   display: block;
 }
-/* line 30, sass/main.sass */
+/* line 33, sass/main.sass */
 #home header {
   height: 770px;
 }
-/* line 35, sass/main.sass */
+/* line 38, sass/main.sass */
 header .header-container {
   width: 1440px;
   margin: 0 auto;
   position: relative;
 }
-/* line 39, sass/main.sass */
+/* line 42, sass/main.sass */
 header nav {
   background-color: rgba(0, 0, 0, 0.35);
   height: 115px;
@@ -93,7 +101,7 @@ header nav {
   z-index: 1;
   position: relative;
 }
-/* line 45, sass/main.sass */
+/* line 48, sass/main.sass */
 header .logo {
   width: 300px;
   height: 92px;
@@ -103,56 +111,56 @@ header .logo {
   top: 10px;
   margin-left: -150px;
 }
-/* line 46, sass/main.sass */
+/* line 49, sass/main.sass */
 header .logo h1, header .logo h3 {
   text-indent: -10000px;
 }
-/* line 55, sass/main.sass */
+/* line 58, sass/main.sass */
 header .navigation {
   padding-top: 50px;
   display: inline-block;
   text-align: center;
 }
-/* line 59, sass/main.sass */
+/* line 62, sass/main.sass */
 header .navigation li {
   display: inline-block;
   text-transform: uppercase;
 }
 @media screen and (min-width: 1450px) {
-  /* line 55, sass/main.sass */
+  /* line 58, sass/main.sass */
   header .navigation {
     float: right;
   }
-  /* line 64, sass/main.sass */
+  /* line 67, sass/main.sass */
   header .navigation:first-of-type {
     float: left;
   }
-  /* line 66, sass/main.sass */
+  /* line 69, sass/main.sass */
   header .navigation:first-of-type li {
     margin-left: 45px;
     margin-right: 0;
   }
-  /* line 69, sass/main.sass */
+  /* line 72, sass/main.sass */
   header .navigation li {
     margin-right: 45px;
   }
 }
-/* line 73, sass/main.sass */
+/* line 76, sass/main.sass */
 header .navigation a {
   color: white;
   text-decoration: none;
 }
-/* line 76, sass/main.sass */
+/* line 79, sass/main.sass */
 header .navigation a.active {
   border-bottom: 3px solid white;
 }
-/* line 78, sass/main.sass */
+/* line 81, sass/main.sass */
 header .localization {
   position: absolute;
   top: 0;
   right: 45px;
 }
-/* line 82, sass/main.sass */
+/* line 85, sass/main.sass */
 header .localization li {
   padding: 7px 14px;
   background: white;
@@ -160,49 +168,49 @@ header .localization li {
   float: left;
   display: block;
 }
-/* line 88, sass/main.sass */
+/* line 91, sass/main.sass */
 header .localization li.active {
   background: #b24629;
 }
-/* line 90, sass/main.sass */
+/* line 93, sass/main.sass */
 header .localization li.active a {
   color: white;
 }
-/* line 92, sass/main.sass */
+/* line 95, sass/main.sass */
 header .localization li a {
   text-decoration: none;
   color: #999999;
 }
 
-/* line 95, sass/main.sass */
+/* line 98, sass/main.sass */
 footer {
   text-align: center;
   text-transform: uppercase;
   margin-top: 14px;
   margin-bottom: 50px;
 }
-/* line 100, sass/main.sass */
+/* line 103, sass/main.sass */
 footer ul {
   margin-bottom: 6px;
 }
-/* line 102, sass/main.sass */
+/* line 105, sass/main.sass */
 footer ul li {
   display: inline-block;
   padding: 0 25px;
   border-right: 1px solid #333333;
 }
-/* line 106, sass/main.sass */
+/* line 109, sass/main.sass */
 footer ul li:last-child {
   border-right: none;
 }
 
-/* line 109, sass/main.sass */
+/* line 112, sass/main.sass */
 .banners {
   height: 100%;
   position: relative;
   z-index: 0;
 }
-/* line 113, sass/main.sass */
+/* line 116, sass/main.sass */
 .banners .banner {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -216,31 +224,36 @@ footer ul li:last-child {
   color: white;
   font-size: 46px;
 }
-/* line 123, sass/main.sass */
+/* line 126, sass/main.sass */
 .banners .banner .banner-headline {
   max-width: 900px;
   margin: 0 auto;
   position: relative;
 }
 
-/* line 130, sass/main.sass */
+/* line 133, sass/main.sass */
 .container {
   width: 1005px;
   margin: 0 auto;
   position: relative;
 }
-/* line 134, sass/main.sass */
+/* line 137, sass/main.sass */
 #home main#content .container {
   margin-top: 0;
   margin-bottom: 0;
 }
-/* line 137, sass/main.sass */
+/* line 140, sass/main.sass */
 main#content .container {
   margin-top: 80px;
   margin-bottom: 40px;
 }
+/* line 143, sass/main.sass */
+.container h1 {
+  font-family: "Nickyshand", Tahoma, Geneva, sans-serif;
+  font-size: 94px;
+}
 
-/* line 142, sass/main.sass */
+/* line 148, sass/main.sass */
 .page-content:after {
   content: "";
   clear: both;
@@ -248,46 +261,46 @@ main#content .container {
   height: 1px;
   display: block;
 }
-/* line 148, sass/main.sass */
+/* line 154, sass/main.sass */
 .page-content .page-image {
   float: right;
   padding-left: 75px;
   width: 334px;
 }
-/* line 152, sass/main.sass */
+/* line 158, sass/main.sass */
 .page-content .page-image img {
   width: 334px;
 }
-/* line 154, sass/main.sass */
+/* line 160, sass/main.sass */
 .page-content .page-text {
   float: left;
   width: 596px;
 }
-/* line 157, sass/main.sass */
+/* line 163, sass/main.sass */
 .page-content .page-text h1 {
   margin-bottom: 10px;
 }
-/* line 159, sass/main.sass */
+/* line 165, sass/main.sass */
 .page-content .page-text h2 {
   border-top: 1px solid #b24629;
   border-bottom: 1px solid #b24629;
   padding: 25px 0;
   margin: 35px 0;
 }
-/* line 164, sass/main.sass */
+/* line 170, sass/main.sass */
 .page-content .page-text .page-text-block {
   display: none;
 }
-/* line 166, sass/main.sass */
+/* line 172, sass/main.sass */
 .page-content .page-text .page-text-block.active {
   display: block;
 }
 
-/* line 171, sass/main.sass */
+/* line 177, sass/main.sass */
 .wine-page-content .wine-page-image {
   position: relative;
 }
-/* line 173, sass/main.sass */
+/* line 179, sass/main.sass */
 .wine-page-content .wine-page-image:before {
   content: "";
   display: block;
@@ -302,7 +315,7 @@ main#content .container {
   top: 110px;
   z-index: 0;
 }
-/* line 186, sass/main.sass */
+/* line 192, sass/main.sass */
 .wine-page-content .wine-page-image img {
   float: right;
   margin-right: 60px;
