--- a/public/css/main.css
+++ b/public/css/main.css
@@ -230,30 +230,34 @@ footer ul li:last-child {
   margin: 0 auto;
   position: relative;
 }
+/* line 130, sass/main.sass */
+.banners #wine-page-banner {
+  background-image: url('/images/banners/wine-banner.jpg?1421107543');
+}
 
-/* line 133, sass/main.sass */
+/* line 135, sass/main.sass */
 .container {
   width: 1005px;
   margin: 0 auto;
   position: relative;
 }
-/* line 137, sass/main.sass */
+/* line 139, sass/main.sass */
 #home main#content .container {
   margin-top: 0;
   margin-bottom: 0;
 }
-/* line 140, sass/main.sass */
+/* line 142, sass/main.sass */
 main#content .container {
   margin-top: 80px;
   margin-bottom: 40px;
 }
-/* line 143, sass/main.sass */
+/* line 145, sass/main.sass */
 .container h1 {
   font-family: "Nickyshand", Tahoma, Geneva, sans-serif;
   font-size: 94px;
 }
 
-/* line 148, sass/main.sass */
+/* line 150, sass/main.sass */
 .page-content:after {
   content: "";
   clear: both;
@@ -261,46 +265,46 @@ main#content .container {
   height: 1px;
   display: block;
 }
-/* line 154, sass/main.sass */
+/* line 156, sass/main.sass */
 .page-content .page-image {
   float: right;
   padding-left: 75px;
   width: 334px;
 }
-/* line 158, sass/main.sass */
+/* line 160, sass/main.sass */
 .page-content .page-image img {
   width: 334px;
 }
-/* line 160, sass/main.sass */
+/* line 162, sass/main.sass */
 .page-content .page-text {
   float: left;
   width: 596px;
 }
-/* line 163, sass/main.sass */
+/* line 165, sass/main.sass */
 .page-content .page-text h1 {
   margin-bottom: 10px;
 }
-/* line 165, sass/main.sass */
+/* line 167, sass/main.sass */
 .page-content .page-text h2 {
   border-top: 1px solid #b24629;
   border-bottom: 1px solid #b24629;
   padding: 25px 0;
   margin: 35px 0;
 }
-/* line 170, sass/main.sass */
+/* line 172, sass/main.sass */
 .page-content .page-text .page-text-block {
   display: none;
 }
-/* line 172, sass/main.sass */
+/* line 174, sass/main.sass */
 .page-content .page-text .page-text-block.active {
   display: block;
 }
 
-/* line 177, sass/main.sass */
+/* line 179, sass/main.sass */
 .wine-page-content .wine-page-image {
   position: relative;
 }
-/* line 179, sass/main.sass */
+/* line 181, sass/main.sass */
 .wine-page-content .wine-page-image:before {
   content: "";
   display: block;
@@ -315,11 +319,72 @@ main#content .container {
   top: 110px;
   z-index: 0;
 }
-/* line 192, sass/main.sass */
+/* line 194, sass/main.sass */
 .wine-page-content .wine-page-image img {
   float: right;
   margin-right: 60px;
   width: 195px;
   position: relative;
   z-index: 1;
+}
+
+/* line 201, sass/main.sass */
+.wine-browser {
+  width: 1000px;
+  margin: 0 auto;
+  text-align: justify;
+  padding-top: 55px;
+}
+/* line 207, sass/main.sass */
+.wine-browser li {
+  display: inline-block;
+  width: 140px;
+  padding: 10px;
+  margin: 0;
+  padding: 0;
+  margin-right: 62px;
+  cursor: pointer;
+  position: relative;
+  padding-bottom: 20px;
+}
+/* line 218, sass/main.sass */
+.wine-browser li:hover:after {
+  content: "";
+  width: 66px;
+  height: 7px;
+  background-color: white;
+  display: block;
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  margin-left: -33px;
+}
+/* line 228, sass/main.sass */
+.wine-browser li img {
+  width: 140px;
+}
+/* line 230, sass/main.sass */
+.wine-browser li:last-child {
+  margin-right: 0;
+}
+/* line 232, sass/main.sass */
+.wine-browser li.active {
+  padding: 0;
+  border: 10px solid #ed8f17;
+}
+@media screen and (min-width: 1180px) {
+  /* line 201, sass/main.sass */
+  .wine-browser {
+    width: 1180px;
+    padding-top: 10px;
+  }
+  /* line 238, sass/main.sass */
+  .wine-browser li {
+    width: 170px;
+    margin-right: 71px;
+  }
+  /* line 241, sass/main.sass */
+  .wine-browser li img {
+    width: 170px;
+  }
 }
