--- a/public/css/sass/main.sass
+++ b/public/css/sass/main.sass
@@ -206,14 +206,14 @@ footer
   padding-top: 55px
   li
     display: inline-block
-    width: 140px
-    padding: 10px
+    width: 160px
     margin: 0
     padding: 0
-    margin-right: 62px
+    margin-right: 50px
     cursor: pointer
     position: relative
     padding-bottom: 20px
+    vertical-align: top
     &:hover
       &:after
         content: ""
@@ -227,16 +227,17 @@ footer
         margin-left: -33px
     img
       width: 140px
+      padding: 10px
     &:last-child
       margin-right: 0
-    &.active
+    &.active img
       padding: 0
       border: 10px solid $orange
   @media screen and (min-width: 1180px)
     width: 1180px
-    padding-top: 10px
+    padding-top: 20px
     li
-      width: 170px
-      margin-right: 71px
+      width: 190px
+      margin-right: 57px
       img
         width: 170px
